# surf-path-tracer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
headers/: buffer.h  bvh.h  camera.h  instance.h  material.h  mesh.h  pixel_buffer.h  ray.h  render_context.h  renderer.h  scene.h  surf.h  surf.hpp  surf_math.h  surface.h  timer.h  types.h  ui_manager.h  window_manager.h
headers/vk_layer/: buffer.h  descriptor_pool.h  framebuffer.h  image.h  pipeline.h  render_pass.h  sampler.h  shader.h  texture.h  vk_check.h
shaders/: bvh.glsl  fs_quad.frag  fs_quad_frag.glsl  fs_quad_vert.glsl  megakernel.comp  ray_connect.comp  ray_extend.comp  ray_generation.comp  ray_miss.comp  ray_shade.comp  wavefront_common.glsl  wavefront_finalize.comp
sources/: bvh.cpp  camera.cpp  instance.cpp  main.cpp  mesh.cpp  pixel_buffer.cpp  ray.cpp  render_context.cpp  renderer.cpp  scene.cpp  surf_math.cpp  surface.cpp  timer.cpp  ui_manager.cpp  window_manager.cpp
sources/vk_layer/: buffer.cpp  descriptor_pool.cpp  framebuffer.cpp  image.cpp  pipeline.cpp  render_pass.cpp  sampler.cpp  shader.cpp
